--- a/media-queries.css
+++ b/media-queries.css
@@ -78,7 +78,15 @@
             & .project-style{
                 width: clamp(23rem , 20vw , 25rem);
                 height: clmap(20rem , 22vw, 24rem);
-                box-shadow: 0px 20px 20px var(--box-shadow-for-projects);
+                box-shadow: none;
+
+                &:hover{
+                    cursor: pointer;
+                    box-shadow: 0px 20px 20px var(--box-shadow-for-projects);
+                    background-color: var(--white-color);
+                    border-radius: 1rem;
+                    transition:0.5s;
+                }
             }
         }
     }
