--- a/media-queries.css
+++ b/media-queries.css
@@ -95,6 +95,7 @@
         display: grid;
         place-items: center;
         grid-template-columns: 50% 50%;
+        grid-auto-flow: column-reverse;
         
         padding: 3vw 4vw;
 
@@ -211,6 +212,7 @@
         place-items: center;
         grid-template-columns: 50% 50%;
         padding: 3vw 4vw;
+        grid-auto-flow: column-reverse;
 
         & .copyright-license{
             position: absolute;
