--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,8 @@ section#Home{
 #About-me{
     display: flex;
     flex-direction: column-reverse;
-    margin-top: 7vw;
+    margin-top: 9vw;
+    background-color: red;
 }
 
 .illustrations-of-individuals-collaborating{
