--- a/media-queries.css
+++ b/media-queries.css
@@ -35,7 +35,7 @@
 
         .welcome-section-with-developer-type{
             & h1{
-               font-size: clamp(2rem,2vw, 3.5rem); 
+               font-size: clamp(2rem,2.5vw, 3rem); 
                text-align: left;
                padding: 0rem 0rem;
             }
@@ -143,10 +143,11 @@
         place-items: center;
         grid-template-columns: 50% 50%;
         padding: 0rem 5vw;
+        height: 85vh;
 
         .welcome-section-with-developer-type{
             & h1{
-               font-size: clamp(2rem,2vw, 3.5rem); 
+               font-size: clamp(5rem,5vw, 5.2rem); 
                text-align: left;
                padding: 0rem 0rem;
             }
