--- a/static/styles.css
+++ b/static/styles.css
@@ -22,6 +22,7 @@
     --headings-color:hsla(260, 60%, 24%,0.9);
     --random-color:hsla(232, 26%, 44%, 0.545);
     --border-hover-colors:rgba(40, 227, 218, 0.9);
+    --color-for-hover-effect:hsla(0, 0%, 100%, 0.8);
     --contact-text-color:hsla(80, 10%, 90%, 0.9);
     --button-for-github:linear-gradient(
         to top,
@@ -91,6 +92,7 @@ header{
             animation: portofolio-scripts 3s ease-in-out 1;
             transition: animation 0.5s;
             font-weight: var(--fw-extlight);
+            cursor: pointer;
 
             & .diff-style{
                 color: hsla(259, 83%, 10%, 0.2);
@@ -108,11 +110,11 @@ header{
 
 @keyframes portofolio-scripts {
     0%{
-        width: 0%;
+        /* width: 0%; */
         opacity: 0;
     }
     100%{
-        width: 100%;
+        /* width: 100%; */
         opacity: 1;
     }
     
@@ -137,10 +139,11 @@ header{
             display: none;
         }
         
-        & .my-list-of-headers{
+        & #my-list-of-headers{
             display: flex;
             flex-direction: row;
             list-style: none;
+
             
             & .navbar-styling{
                 --color-for-navbars:rgba(43, 24, 77, 0.9);
@@ -157,9 +160,18 @@ header{
                     color:hsla(0, 0%, 100%, 0.8);
                     transition:all 0.5s ;
                 }
+
+                
             }
+
+            
         }
     }
+}
+
+
+#my-list-of-headers li:first-child a{
+    color:hsla(0, 0%, 100%, 0.8) ;
 }
 
 
@@ -478,13 +490,13 @@ h4{
         border-bottom: 1px solid var(--headings-color);
 
         &:hover , :active{
-            font-size: clamp(1.1rem , 1vw, 1.3rem);
-            transform: scale(1.2);
-            transition: all 0.6s;
+            font-size: clamp(0.95rem , 0.95vw, 1.1rem);
+            transition: all 0.5s; 
         }
 
         & .icon-more-projects{
             width: clamp(1rem , 1vw , 1.2rem);
+            
         }
         
     }
