--- a/static/media-queries.css
+++ b/static/media-queries.css
@@ -10,9 +10,11 @@
         & #navbar{
             position: fixed;
             width: 72%;
-            height: 45%;
-            background-color: hsla(260, 60%, 24%,1);
-            border-radius: 0rem 0rem 0rem 2rem;
+            height: 100%;
+            background-color: hsla(260, 60%, 24%,0.2);
+            backdrop-filter: blur(35px);
+            -webkit-backdrop-filter: blur(35px);
+
             top:0;
             right: 0;
             /* animation: hide-menu 0.5ms ease-in-out; */
@@ -24,8 +26,10 @@
                 top: 20%;
                 display: flex;
                 flex-direction: column;
-                align-items: center;
-                justify-content: center;
+                margin-left: clamp(2.5rem , 2.8vw , 3rem);
+                text-align: left;
+                /* align-items: center; */
+                /* justify-content: center; */
                 row-gap: 1.5rem;
                 bottom: 5%;
                 
@@ -41,9 +45,9 @@
             #close-tbn{
                 position: absolute;
                 top: 3%;
-                font-size: 2rem;
+                font-size: 2.5rem;
                 right: 10%;
-                color: rgba(243, 95, 73, 0.7);
+                color: rgba(43, 24, 77, 0.9);
                 cursor: pointer;
             }
         }
@@ -71,30 +75,6 @@
 }
 
 
-
-
-@keyframes animate-menu {
-    0%{
-        right:-250px;
-        opacity: 0;
-    }
-    100%{
-        right: 0;
-        opacity: 1;
-    }
-    
-}
-
-@keyframes hide-menu {
-    0% {
-      right: 0;
-      opacity: 1;
-    }
-    100% {
-      right: -250px;
-      opacity: 0;
-    }
-}
 
 
 
