--- a/static/media-queries.css
+++ b/static/media-queries.css
@@ -11,13 +11,11 @@
             position: fixed;
             width: 72%;
             height: 100%;
-            background-color: hsla(260, 60%, 24%,0.2);
-            backdrop-filter: blur(35px);
-            -webkit-backdrop-filter: blur(35px);
-
+            background-color: hsla(260, 60%, 24%,0.04);
+            backdrop-filter: blur(40px);
+            -webkit-backdrop-filter: blur(40px);
             top:0;
             right: 0;
-            /* animation: hide-menu 0.5ms ease-in-out; */
             overflow-y: auto;
             z-index: 1;
 
@@ -28,14 +26,14 @@
                 flex-direction: column;
                 margin-left: clamp(2.5rem , 2.8vw , 3rem);
                 text-align: left;
-                /* align-items: center; */
-                /* justify-content: center; */
                 row-gap: 1.5rem;
                 bottom: 5%;
                 
 
                 & .navbar-styling{
-                    color: white;
+                    --color-for-navbars:rgba(43, 24, 77, 0.9);
+                    /* text-decoration:none; */
+                    color: var(--color-for-navbars);
                     font-size: clamp(1.1rem , 1.2vw , 1.3rem);
                     
                 }
@@ -66,11 +64,7 @@
         & #navbar {
             height: 90%;
             overflow-y: auto;
-
-        }
-
-       
-        
+        }        
     }
 }
 
@@ -158,21 +152,6 @@
             font-size: clamp(1.8rem , 2.5vw, 4.5rem);
             
         }
-        & .all-three-projects-lined-up-in-style{
-            & .project-style{
-                width: clamp(23rem , 20vw , 25rem);
-                height: clmap(20rem , 22vw, 24rem);
-                box-shadow: none;
-
-                &:hover{
-                    cursor: pointer;
-                    box-shadow: 0px 20px 20px var(--box-shadow-for-projects);
-                    background-color: var(--white-color);
-                    border-radius: 1rem;
-                    transition:0.5s;
-                }
-            }
-        }
     }
 
     #Contact{
@@ -188,8 +167,6 @@
             bottom: 0;
             margin: 1vw;
         }
-        
-       
     }
 
 }
@@ -274,26 +251,6 @@
             font-size: clamp(1.8rem , 2.5vw, 4.5rem);
             
         }
-        & .all-three-projects-lined-up-in-style{
-            display: grid;
-            place-items: center;
-            grid-template-columns: repeat(3 ,1.5fr);
-            column-gap: clamp(2rem, 2vw, 3rem);
-            row-gap: 0rem;
-            & .project-style{
-                width: clamp(23rem , 20vw , 25rem);
-                height: clmap(20rem , 22vw, 24rem);
-                box-shadow: none;
-
-                &:hover{
-                    cursor: pointer;
-                    box-shadow: 0px 20px 20px var(--box-shadow-for-projects);
-                    background-color: var(--white-color);
-                    border-radius: 1rem;
-                    transition:0.5s;
-                }
-            }
-        }
     }
 
     #Contact{
@@ -308,8 +265,6 @@
             bottom: 0;
             margin: 1vw;
         }
-        
-       
     }
 
 
