--- a/static/styles.css
+++ b/static/styles.css
@@ -225,7 +225,7 @@ section#Home {
         margin-top: 2rem;
         margin-bottom: 1rem;
 
-        .avatar-pic {
+        > picture > .avatar-pic {
             width: clamp(20rem, 22rem, 25rem);
             height: clamp(20rem, 22rem, 25rem);
             object-fit: cover;
@@ -381,7 +381,7 @@ h4 {
             border-radius: 0.5rem;
             overflow: hidden;
 
-            > img {
+            > picture > img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
@@ -411,7 +411,7 @@ h4 {
             > p.project-description {
                 font-family: var(--fs-4);
                 font-weight: var(--fw-reg);
-                color: var(--medGrey);
+                color: var(--lightDarkBlue);
                 text-align: center;
                 padding: 0 2rem;
                 font-size: clamp(0.95rem, 0.96vw, 0.97rem);
