--- a/static/media-queries.css
+++ b/static/media-queries.css
@@ -113,7 +113,8 @@
 
         .welcome-section-with-developer-type{
             & h1{
-               font-size: clamp(2rem,2.5vw, 3rem); 
+               font-size: 2.75rem; 
+               margin-block: 1em;
                text-align: left;
                padding: 0rem 0rem;
             }
